--- a/src/component/Dashboard.css
+++ b/src/component/Dashboard.css
@@ -15,7 +15,7 @@
     width: 51vh;
 }
 ul{
-    margin-top: 1rem;
+    margin: 1rem;
     padding: 1rem 0.5rem;
     /* background-color: lightcoral; */
 }
